--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -497,6 +497,11 @@ svg {
 	margin-bottom: 20px;
 }
 
+.posts figure {
+	max-width: 100%;
+	height: 150px;
+}
+
 .posts img {
 	height: 150px;
 	object-fit: cover;
@@ -509,6 +514,10 @@ svg {
 @media (min-width: 768px) {
 	.posts h3 {
 		font-size: 16px;
+	}
+
+	.posts figure {
+		height: 200px;
 	}
 
 	.posts img {
