--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -48,17 +48,6 @@ svg {
 	font-family: 'Avenir Next', 'Segoe UI', Helvetica, sans-serif;
 }
 
-.sr-only {
-	border: 0; 
-	clip: rect(0 0 0 0); 
-	height: 1px; 
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 1px;
-}
-
 
 /* ヘッダー */
 .header .container {
@@ -278,7 +267,6 @@ svg {
 /* フッター */
 .footer {
 	padding-top: 60px;
-	padding-bottom: 60px;
 	color: #fff;
     background-image: url(/images/pattern.jpg);
     background-size: cover;
@@ -291,13 +279,11 @@ svg {
 	align-items: center;
 }
 
-.footer .site {
-	text-align: center;
-}
-.footer .site p {
+.footer p {
+	padding-bottom: 10px;
 	margin-top: 20px;
-	margin-bottom: 50px;
 	font-size: 14px;
+	text-align: center;
 }
 
 @media (min-width: 768px) {
@@ -430,17 +416,19 @@ svg {
 
 /* 前後の記事へのリンク */
 .postlink {
-	margin: 4em 0;
+	margin: 4em 0 0;
 	list-style: none;
 	color: #477294;
 	font-size: 14px;
 	display: flex;
+	flex-direction: column;
 }
 
 .postlink li {
-	width: 48%;
+	width: 100%;
 	display: flex;
 	align-items: center;
+	margin: 10px 0;
 }
 
 .postlink a {
@@ -460,6 +448,12 @@ svg {
 	margin-left: 10px;
 }
 
+@media (min-width: 768px) {
+	.postlink{
+		flex-direction: initial;
+	}
+}
+
 
 /* ブログ記事一覧ページ */
 .bloglist .container {
@@ -472,8 +466,12 @@ svg {
 }
 
 /* ブログ記事一覧 */
+.newsframe{
+	padding-top: 90px;
+}
+
 .post{
-	box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
+	border:0.5px solid rgba(0,0,0,0.2);
 }
 
 .posts {
@@ -485,7 +483,7 @@ svg {
 }
 
 .posts article {
-	width: 80%;
+	width: 100%;
 	margin-bottom: 20px;
 }
 
@@ -509,7 +507,7 @@ svg {
 
 @media (min-width: 768px) {
 	.posts h3 {
-		font-size: 16px;
+		font-size: 19px;
 	}
 
 	.posts article{
